--- a/test/css/css/stylestest.css
+++ b/test/css/css/stylestest.css
@@ -1,140 +1,81 @@
-
 body {
   font-size: 16px;
-  color: black;
-  background-color: white;
+  color: #fff;
+  background-color: #61122f;
   font-family: 'Oxygen', sans-serif;
 }
 
 /** HEADER **/
 #header-nav {
-  background-color: grey;
+  background-color: #f6b319;
   border-radius: 0;
   border: 0;
-  padding-top:5px;
-  padding-bottom:10px;
-
 }
 
+/*#logo-img {
+  background: url('../images/restaurant-logo_large.png') no-repeat;
+  width: 150px;
+  height: 150px;
+  margin: 10px 15px 10px 0;
+}*/
 
 .navbar-brand {
   padding-top: 25px;
 }
 
 .navbar-brand h1 { /* Restaurant name */
-  font-family: 'Oxygen', sans-serif;
-  color: black;
+  font-family: 'Lora', serif;
+  color: #557c3e;
   font-size: 1.5em;
+  text-transform: uppercase;
   font-weight: bold;
   text-shadow: 1px 1px 1px #222;
   margin-top: 0;
   margin-bottom: 0;
   line-height: .75;
 }
-
-h2{
-  text-align:center;
-  font-family: 'Oxygen', sans-serif;
-  font-weight:bold;
-  color:black;
-}
-
-p {
-  padding:15px;
-  margin:0;
-}
-.container {
-  border:none;
-  margin-left:auto;
-  margin-right:auto;
-  margin-bottom:15px;
-  margin-top:15px;
-  padding:10px;
-}
-
-section {
-  border:1px black;
-  background-color: grey;
-  width:100%;
-  height:auto;
-  font-family:Oxygen, sans-serif;
-  color:black;
-  position:relative;
-  overflow:auto;
-}
-
-
 .navbar-brand a:hover, .navbar-brand a:focus {
   text-decoration: none;
 }
-
-.navbar-brand p span { /* Star-K */
-  vertical-align: middle;
+/*.navbar-brand 
+  color: #000;
+  text-transform: uppercase;
+  font-size: .7em;
+  margin-top: 15px;
 }
+.navbar-brand p span {
+  vertical-align: middle;
+}*/
 
 #nav-list {
-  margin-top:0;
-  margin-bottom:0;
-  color:black;
+  margin-top: 10px;
 }
 #nav-list a {
-  border:1px solid;
-  padding-bottom:25px;
-  color: black;
+  color: #951C49;
   text-align: center;
 }
 #nav-list a:hover {
-  color:black;
   background: #E7E7E7;
 }
 #nav-list a span {
-  color:black;
   font-size: 1.8em;
 }
 
-#breakfast {
-  
-  text-align:center;
-  font-family:'Oxygen', sans-serif;
-  font-weight:bold;
-  margin-top:0;
-  margin-bottom:0;
-  padding:10px;
-  background-color:grey;
+/*#phone {
+  margin-top: 5px;
 }
-
-#lunch {
-  
-  text-align:center;
-  font-family:'Oxygen', sans-serif;
-  font-weight:bold;
-  margin-top:0;
-  margin-bottom:0;
-  padding:10px;
-  background-color:grey;
+#phone a { 
+  text-align: right;
+  padding-bottom: 0;
 }
-
-#dinner {
-  
-  text-align:center;
-  font-family:'Oxygen', sans-serif;
-  font-weight:bold;
-  margin-top:0;
-  margin-bottom:0;
-  padding:10px;
-  background-color:grey;
-}
-
-#p1{
-  margin-bottom:10px;
-  margin-top:10px;
-}
-
-
-
+#phone div { 
+  color: #557c3e;
+  text-align: right;
+  padding-right: 15px;
+}*/
 
 .navbar-header button.navbar-toggle, .navbar-header .icon-bar {
-  border: 1px solid black;
+  border: 1px solid #61122f;
 }
 .navbar-header button.navbar-toggle {
   clear: both;
@@ -142,11 +83,20 @@ section {
 }
 /* END HEADER */
 
+/********** Large devices only **********/
+@media (min-width: 1200px) {
+
+}
 
 /********** Medium devices only **********/
 @media (min-width: 992px) and (max-width: 1199px) {
   /* Header */
-
+  #logo-img {
+    background: url('../images/restaurant-logo_medium.png') no-repeat;
+    width: 100px;
+    height: 100px;
+    margin: 5px 5px 5px 0;
+  }
   /* End Header */
 }
 
@@ -166,18 +116,37 @@ section {
     padding-top: 10px;
     font-size: 5vw; /* 1vw = 1% of viewport width */
   }
-
+  .navbar-brand p { /* Kosher cert */
+    font-size: .6em;
+    margin-top: 12px;
+  }
+  .navbar-brand p img { /* Star-K */
+    height: 20px;
+  }
 
   #collapsable-nav a { /* Collapsed nav menu text */
     font-size: 1.2em;
   }
-
   #collapsable-nav a span { /* Collapsed nav menu glyph */
     font-size: 1em;
     margin-right: 5px;
   }
 
-  
+  #call-btn > a {
+    font-size: 1.5em;
+    display: block;
+    margin: 0 20px;
+    padding: 10px;
+    border: 2px solid #fff;
+    background-color: #f6b319;
+    color: #951c49;
+  }
+  #xs-deliver {
+    margin-top: 5px;
+    font-size: .7em;
+    letter-spacing: .1em;
+    text-transform: uppercase;
+  }
   /* End Header */
 
 }
